# SwissCom_Assignment

./: .gitignore  .project  README.md  init.py  pom.xml  pyproject.toml  tasks_verifier_test.py  testng.xml
configs/: configuration.properties
springbootApi/: pom.xml
springbootApi/src/main/java/com/swisscom/springbootApi/: SpringbootApiApplication.java
springbootApi/src/main/java/com/swisscom/springbootApi/model/: User.java
springbootApi/src/main/resources/: application.properties
springbootApi/src/test/java/com/swisscom/springbootApi/: SpringbootApiApplicationTests.java
src/main/java/Com/Assignment/Custom_Framework/: App.java
src/main/java/Helper/: HomePageHelper.java  ScriptHelper.java
src/main/java/pages/: SwissCom.java  SwisscomHomepage.java
src/test/java/Com/Assignment/Custom_Framework/: AppTest.java
src/test/java/com/swisscom/utilities/: DataTableReader.java  ReadConfigurationFile.java
src/test/java/runner/: Framework.java  HomePageRunner.java  Runner.java
src/test/java/stepDefinition/: GivenSteps.java  ThenSteps.java  WhenSteps.java
src/test/resources/: TestData.xls
src/test/resources/features/: SearchHomePage.feature
tasks/: proc_dump.txt  task_1.py  task_10.py  task_12.py  task_16.py  task_2.py  task_3.py  task_4.py
test-output/: emailable-report.html  index.html  testng-results.xml
test-output/Default suite/: Default test.html  Default test.xml  testng-failed.xml
test-output/junitreports/: TEST-runner.HomePageRunner.xml
test-output/old/Default suite/: classes.html  methods-alphabetical.html  methods.html  testng.xml.html
(+3 files in other folders)
