[tool.poetry]
name = "python-assessment"
version = "0.1.0"
description = ""
authors = ["Gerhard Kirschner <gerhard.kirschner@swisscom.com>"]

packages = [
    { include = 'tasks'}
]

[tool.poetry.dependencies]
python = "~3.8"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
pyLint = "^2.4.4"

[tool.poetry.scripts]
init = "init:write_src_config"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
